fix(server): harden torrent report tree fetch
Publish tmpTCReport without a check-then-act race, default a missing
ParentID to 0, always write fetchNode pagination, and keep endRow
from falling below startRow after Math.clamp.